--- a/css/main.scss
+++ b/css/main.scss
@@ -4,14 +4,66 @@ body {
     color: #387c9b;
   }
 }
+.before {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
+  p {
+    margin: 0;
+  }
+  a {
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      right: 30px;
+    }
+  }
+}
 
 .logo {
   display: flex;
   justify-content: center;
+  padding: 40px;
+  img {
+    height: 40px;
+  }
 }
 .nav-wrapper {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+  .nav-items {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    //padding: 20px;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      justify-content: center;
+    }
+    a {
+      //border-bottom: 1px solid black;
+      @media screen and (min-width: 768px) {
+        border-right: 1px solid black;
+        padding: 20px;
+        border-bottom: none;
+        text-align: center;
+      }
+    }
+  }
+}
+
+.nav-wrapper-mobile {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
   .nav-items {
     font-size: 20px;
     display: flex;
@@ -113,8 +165,16 @@ footer {
       text-decoration: none;
       padding: 5px;
     }
-    .social {
-      margin-right: 20px;
+  }
+  .social {
+    // display: flex;
+    // justify-content: center;
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      right: 30px;
+    }
+    img {
+      margin: 0 auto;
     }
   }
 }
