--- a/_output/css/main.css
+++ b/_output/css/main.css
@@ -26,10 +26,12 @@ body {
               flex-direction: row; } }
   .before p {
     margin: 0; }
-  @media screen and (min-width: 768px) {
-    .before a {
-      position: absolute;
-      right: 30px; } }
+  .before a {
+    text-decoration: none; }
+    @media screen and (min-width: 768px) {
+      .before a {
+        position: absolute;
+        right: 30px; } }
 
 .logo {
   display: -webkit-box;
@@ -61,7 +63,8 @@ body {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    text-align: center; }
+    text-align: center;
+    height: 70px; }
     @media screen and (min-width: 768px) {
       .nav-wrapper .nav-items {
         -webkit-box-orient: horizontal;
@@ -73,12 +76,18 @@ body {
         -webkit-justify-content: center;
             -ms-flex-pack: center;
                 justify-content: center; } }
-    @media screen and (min-width: 768px) {
-      .nav-wrapper .nav-items a {
-        border-right: 1px solid black;
-        padding: 20px;
-        border-bottom: none;
-        text-align: center; } }
+    .nav-wrapper .nav-items a {
+      text-decoration: none;
+      color: black; }
+      @media screen and (min-width: 768px) {
+        .nav-wrapper .nav-items a {
+          border-right: 1px solid black;
+          padding: 20px;
+          border-bottom: none;
+          text-align: center;
+          width: 140px; } }
+      .nav-wrapper .nav-items a:last-child {
+        border-right: none; }
 
 .nav-wrapper-mobile {
   border-top: 1px solid black;
@@ -97,10 +106,10 @@ body {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 20px;
     text-align: center; }
     .nav-wrapper-mobile .nav-items a {
-      border-bottom: 1px solid black; }
+      border-bottom: 1px solid black;
+      padding: 20px; }
       @media screen and (min-width: 768px) {
         .nav-wrapper-mobile .nav-items a {
           border-right: 1px solid black;
@@ -122,11 +131,17 @@ body {
   font-family: 'PT Sans', sans-serif;
   background-color: #f7f7f5;
   text-align: center;
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid black;
+  height: 400px; }
   .splash .splash-content {
     padding: 40px; }
   .splash h1 {
-    font-weight: 400; }
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 24px; }
+    @media screen and (min-width: 768px) {
+      .splash h1 {
+        font-size: 48px; } }
   .splash p {
     margin: 0 auto;
     font-size: 18px;
@@ -160,7 +175,6 @@ body {
 
 .footer-a {
   margin: 40px 0px 40px 0px;
-  border-top: 1px solid black;
   border-bottom: 1px solid black; }
   .footer-a .image-wrapper {
     display: -webkit-box;
@@ -200,7 +214,8 @@ footer {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid black;
+  margin: 20px 0px 20px 0px; }
   @media screen and (min-width: 768px) {
     footer {
       -webkit-box-orient: horizontal;
@@ -231,11 +246,30 @@ footer {
     footer .footer-nav a {
       text-decoration: none;
       padding: 5px; }
-  @media screen and (min-width: 768px) {
-    footer .social {
-      position: absolute;
-      right: 30px; } }
-  footer .social img {
-    margin: 0 auto; }
+  footer .social {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 20px; }
+    @media screen and (min-width: 768px) {
+      footer .social {
+        position: absolute;
+        right: 30px;
+        margin-bottom: 0px; } }
+    footer .social img {
+      margin: 0 auto; }
+
+.below-content .button-b {
+  width: 220px;
+  padding: 10px;
+  border: 1px solid black; }
+
+.below-content a {
+  text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
