--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ body {
     margin: 0;
   }
   a {
+    text-decoration: none;
     @media screen and (min-width: 768px) {
       position: absolute;
       right: 30px;
@@ -42,17 +43,24 @@ body {
     flex-direction: column;
     //padding: 20px;
     text-align: center;
+    height: 70px;
     @media screen and (min-width: 768px) {
       flex-direction: row;
       justify-content: center;
     }
     a {
       //border-bottom: 1px solid black;
+      text-decoration: none;
+      color: black;
       @media screen and (min-width: 768px) {
         border-right: 1px solid black;
         padding: 20px;
         border-bottom: none;
         text-align: center;
+        width: 140px;
+      }
+      &:last-child {
+        border-right: none;
       }
     }
   }
@@ -68,10 +76,11 @@ body {
     font-size: 20px;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    //padding: 20px;
     text-align: center;
     a {
       border-bottom: 1px solid black;
+      padding: 20px;
       @media screen and (min-width: 768px) {
         border-right: 1px solid black;
         padding: 20px;
@@ -91,11 +100,19 @@ body {
   background-color: #f7f7f5;
   text-align: center;
   border-bottom: 1px solid black;
+  height: 400px;
+  @media screen and (min-width: 768px) {
+  }
   .splash-content {
     padding: 40px;
   }
   h1 {
+    font-family: 'Merriweather', serif;
     font-weight: 400;
+    font-size: 24px;
+    @media screen and (min-width: 768px) {
+      font-size: 48px
+    }
   }
   p {
     margin: 0 auto;
@@ -128,7 +145,7 @@ body {
 .footer-a {
   margin: 40px 0px 40px 0px;
   //background: teal;
-  border-top: 1px solid black;
+  //border-top: 1px solid black;
   border-bottom: 1px solid black;
   .image-wrapper {
     display: flex;
@@ -148,6 +165,7 @@ footer {
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid black;
+  margin: 20px 0px 20px 0px;
   @media screen and (min-width: 768px) {
     flex-direction: row;
   }
@@ -167,14 +185,26 @@ footer {
     }
   }
   .social {
-    // display: flex;
-    // justify-content: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
     @media screen and (min-width: 768px) {
       position: absolute;
       right: 30px;
+      margin-bottom: 0px;
     }
     img {
       margin: 0 auto;
     }
+  }
+}
+.below-content {
+  .button-b {
+    width: 220px;
+    padding: 10px;
+    border: 1px solid black;
+  }
+  a {
+    text-decoration: none;
   }
 }
